[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyparam"
version = "0.4.5"
description = "Powerful parameter processing."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyparam"
repository = "https://github.com/pwwang/pyparam"

[tool.poetry.dependencies]
python = "^3.6"
python-simpleconf = "*"
rich = "^9"
diot = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
toml = "^0.10"
pyyaml = "^5.3"
