[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyparam"
version = "0.4.9"
description = "Powerful parameter processing."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyparam"
repository = "https://github.com/pwwang/pyparam"

[tool.poetry.dependencies]
python = "^3.6"
python-simpleconf = "*"
rich = "*"
diot = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
toml = "0.*"
pyyaml = "5.*"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv --cov-config=.coveragerc --cov=pyparam --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [
    #"error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
